--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,39 +5,44 @@ on:
     branches: [ "master" ]
   pull_request:
 
-
 jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
 
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    # Use the Bash shell regardless of the OS
     defaults:
       run:
         shell: bash
 
     steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
+      # Step 1: Checkout the repository to the GitHub Actions runner
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    - name: Authenticate with Google Cloud
-      env:
+      # Step 2: Authenticate with Google Cloud
+      - name: Authenticate with Google Cloud
+        env:
           GOOGLE_OAUTH_ACCESS_TOKEN: ${{ secrets.GOOGLE_OAUTH_ACCESS_TOKEN }}
+        run: |
+          echo $GOOGLE_OAUTH_ACCESS_TOKEN | gcloud auth activate-service-account --key-file=-
+          gcloud config set project cicd0626
 
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      run: terraform init
+      # Step 3: Install Terraform (specify version as needed)
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.4.0  # Specify your required version here
 
+      # Step 4: Initialize Terraform
+      - name: Terraform Init
+        run: terraform init
 
-    # Generates an execution plan for Terraform
-    - name: Terraform Plan
-      run: terraform plan -input=false
+      # Step 5: Plan Terraform execution
+      - name: Terraform Plan
+        run: terraform plan -input=false
 
-
-      # On push to "main", build or change infrastructure according to Terraform configuration files
-      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    - name: Terraform Apply
-      run: terraform apply -auto-approve -input=false
-
+      # Step 6: Apply Terraform configuration
+      - name: Terraform Apply
+        if: github.ref == 'refs/heads/master'
+        run: terraform apply -auto-approve -input=false
