--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,7 +23,7 @@ jobs:
       # Step 2: Authenticate with Google Cloud
       - name: Authenticate with Google Cloud
         env:
-          GOOGLE_OAUTH_ACCESS_TOKEN: ${{ secrets.GOOGLE_OAUTH_ACCESS_TOKEN }}
+          GOOGLE_OAUTH_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo $GOOGLE_OAUTH_ACCESS_TOKEN | gcloud auth activate-service-account --key-file=-
           gcloud config set project cicd0626
