--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,44 +5,42 @@ on:
     branches: [ "master" ]
   pull_request:
 
+permissions:
+  contents: read
+  id-token: 'write'
+
 jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
 
-    # Use the Bash shell regardless of the OS
+
     defaults:
       run:
         shell: bash
 
     steps:
-      # Step 1: Checkout the repository to the GitHub Actions runner
-      - name: Checkout
-        uses: actions/checkout@v3
+    # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
+      uses: actions/checkout@v3
 
-      # Step 2: Authenticate with Google Cloud
-      - name: Authenticate with Google Cloud
-        env:
-          GOOGLE_OAUTH_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          echo $GOOGLE_OAUTH_ACCESS_TOKEN | gcloud auth activate-service-account --key-file=-
-          gcloud config set project cicd0626
+    - id: auth
+      uses: google-github-actions/auth@v2.0.0  
+      with:
+        workload_identity_provider: 'projects/300069127181/locations/global/workloadIdentityPools/github-demo-pool/providers/github' 
+        service_account:  'sa-terraform-new-practise@cicd0626.iam.gserviceaccount.com'
 
-      # Step 3: Install Terraform (specify version as needed)
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.4.0  # Specify your required version here
 
-      # Step 4: Initialize Terraform
-      - name: Terraform Init
-        run: terraform init
 
-      # Step 5: Plan Terraform execution
-      - name: Terraform Plan
-        run: terraform plan -input=false
 
-      # Step 6: Apply Terraform configuration
-      - name: Terraform Apply
-        if: github.ref == 'refs/heads/master'
-        run: terraform apply -auto-approve -input=false
+    - name: Terraform Init
+      run: terraform init
+
+
+    # Generates an execution plan for Terraform
+    - name: Terraform Plan
+      run: terraform plan -input=false
+
+
+    - name: Terraform Apply
+      run: terraform apply -auto-approve -input=false
