--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .terraform.lock.hcl
 .terraform/
-.*terraform.tfvars
+.terraform.tfvars
 env/dev .terraform
 env/dev .terraform.lock.hcl
-env/dev .*terraform.tfvars
+env/dev .terraform.tfvars
