removed terraform.tfvars

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .terraform.lock.hcl
 .terraform/
-.terraform.tfvars
+terraform.tfvars
 env/dev .terraform
 env/dev .terraform.lock.hcl
-env/dev .terraform.tfvars
+env/dev terraform.tfvars
 modules/api .terraform
 modules/api .terraform.lock.hcl
