--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@
 terraform.tfvars
 env/dev .terraform
 env/dev .terraform.lock.hcl
-env/dev terraform.tfvars
+env/dev/terraform.tfvars
 modules/api .terraform
 modules/api .terraform.lock.hcl
